# rasterion

./: .gitignore  CMakeLists.txt  README.md
include/: rasterion.h
include/math/: util.h  vector.h
src/: CMakeLists.txt  id_pool.h  rasterion.cpp
tests/: CMakeLists.txt  Test5.h  TestInterface.h  main.cpp  tinyOBJLoader.h
tests/catch2/: catch.hpp
